# blits

./: Cargo.toml  README.md  build.sh
client/: Cargo.toml
client/config/: config.toml
client/src/: appstate.rs  floatingtetromino.rs  ltpcommand.rs  ltpcontroller.rs  main.rs  states.rs  view.rs
docs/: lits-text-protocol.md
engine/: Cargo.toml
engine/config/: config.toml
engine/models/: generate_model.py
engine/src/: main.rs
engine/src/config/: mod.rs
engine/src/interfaces/: ltpi.rs  mod.rs
engine/src/interfaces/selfplay/: agent.rs  config.rs  elo.rs  mod.rs  selfplay.rs
engine/src/mcts/: config.rs  mcts.rs  mod.rs  node.rs  searcher.rs  sync.rs  threadpool.rs
engine/src/neural/: config.rs  input.rs  memory.rs  mod.rs  network.rs
lits/: Cargo.toml
lits/src/: board.rs  colour.rs  game.rs  lib.rs  outcome.rs  player.rs  point.rs  tetromino.rs  transform.rs  view.rs
litstp/: Cargo.toml
utils/: Cargo.toml
utils/src/: b65k.rs  error.rs  hash.rs  lib.rs  log.rs  notate.rs  serialize.rs  uuid.rs
