
[package]

name        = "client"
version     = "0.1.0"
edition     = "2021"

[dependencies]

clap        = { version = "3.0", features = ["derive"] }
coffee      = { version = "0.4", features = ["vulkan"] }
gtp         = "0.1.2"
lazy_static = "1.4.0"
regex       = "1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.5"

lits        = { path = "../lits" }
utils       = { path = "../utils" }
