
[package]

name       = "engine"
version    = "0.1.0"
edition    = "2021"

[dependencies]

clap       = { version = "3.0", features = ["derive"] }
lits       = { path = "../lits" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch        = "0.6"
toml       = "0.5"
utils      = { path = "../utils" }

