
[package]

name          = "utils"
version       = "0.1.0"
edition       = "2021"

[dependencies]

anyhow        = "1.0"
flexi_logger  = "0.22"
lazy_static   = "1.4.0"
log           = "0.4"
nohash-hasher = "0.2.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
thiserror     = "1.0"
toml          = "0.5"
uuid          = { version = "0.8", features = ["serde", "v4"] }
